public/style.css
.chart {
  height: 180px;
  width: 100%;
}

/* -----------------------------------------------------------------
 * headings
 * ----------------------------------------------------------------- */

.page-header {
  margin-top: 0px;
}

.panel .panel-heading {
  background: white;
  font-size: 18px;
}
.panel .panel-heading-browse {
  padding-top: 0px;
  padding-bottom: 0px;
}

/* -----------------------------------------------------------------
 * status marks
 * ----------------------------------------------------------------- */

.pass, .fail, .tmpfail, .no_test_data {
  font-family: 'FontAwesome';
}

.pass:before {
  content: "\f164 ";
  color: #8ae234;
}

.fail:before {
  content: "\f165 ";
  color: #ef2929;
}

.tmpfail:before {
  content: "\f059 ";
  color: #ffd862;
}

.no_test_data:before {
  content: "\f06a ";
  color: #babdb6;
}

/* -----------------------------------------------------------------
 * icons
 * ----------------------------------------------------------------- */

#icon-rss:before {
  content: "\f09e ";
  color: orange;
}

#icon-rss:hover {
  text-decoration: none !important;
}

#icon-tracker:before {
  content: "\f05a ";
}

#icon-tracker:hover {
  text-decoration: none !important;
}

/* -----------------------------------------------------------------
 * navbar
 * ----------------------------------------------------------------- */

.navbar-brand {
  background: transparent url(debian.png) 10px 50% no-repeat;
  padding-left: 50px !important;
}

/* -----------------------------------------------------------------
 * footer
 * ----------------------------------------------------------------- */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -60px;
  padding: 0 0 60px;
}
#footer {
  margin-top: 3em;
  padding: 1em;
  min-height: 60px;
  border-top: 1px solid #efefef;
 }
/* -----------------------------------------------------------------
 * package browsing by prefix
 * ----------------------------------------------------------------- */

.list-inline h5 a {
  color: #E90051;
  background-color: #eeeeec;
  padding: 1px 10px;
  border-radius: 5px;
}

.list-inline h5 a:hover {
  text-decoration: none;
  background-color: #E90051;
  color: white;
}

/* -----------------------------------------------------------------
 * package search
 * ----------------------------------------------------------------- */

#package-select {
  font-size: 14px;
  margin: 0px;
  padding: 0px;
}

#package-select li {
  margin-top: 1em;
  list-style: none;
  border-bottom: 1px solid #eeeeee;
}

#package-select li .search-sub-links {
  margin-top: 0.25em;
  margin-left: 2em;
}

#package-select a.package-page:hover {
  background-color: #eeeeec;
}

.search-count, .search-no-results {
  padding: 0.25em;
  color: #d5d7df;
}

/* -----------------------------------------------------------------
 * Feed links
 * ----------------------------------------------------------------- */

a .fa-rss {
  color: #f57900;
}

